--- a/package.json
+++ b/package.json
@@ -10,9 +10,25 @@
   },
   "dependencies": {
     "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
+    "eslint-config-next": "^13.0.5",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@rainbow-me/rainbowkit": "^0.8.0",
+    "autoprefixer": "^10.4.13",
+    "axios": "^1.2.0",
+    "ethers": "^5.7.2",
+    "javascript-time-ago": "^2.5.9",
+    "postcss": "^8.4.19",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
+    "react-ticker": "^1.3.2",
+    "tailwindcss": "^3.2.4",
+    "timeago.js": "^4.0.2",
+    "truncate-eth-address": "^1.0.2",
+    "wagmi": "^0.8.8"
   }
 }
